# musi-next

./: README.md  musi.json
crates/musi/src/: diag.rs  diag_catalog_gen.rs
crates/musi/tests/: cli.rs
crates/musi_diaggen/src/: render.rs
crates/musi_fmt/src/: imports.rs  lib.rs  markdown.rs  paths.rs  tests.rs
crates/musi_foundation/modules/: core.ms  crypto_host.ms  encoding_host.ms  env.ms  ffi.ms  fmt.ms  fs.ms  intrinsics.ms  io.ms  json_host.ms  log.ms  process.ms  random.ms  syntax.ms  test.ms  text.ms  time.ms  uuid_host.ms
crates/musi_foundation/src/: tests.rs
crates/musi_lsp/: Cargo.toml
crates/musi_lsp/src/: server.rs
crates/musi_lsp/src/server/: capabilities.rs  code_actions.rs  config.rs  convert.rs  diagnostics.rs  formatting.rs  hints.rs  mod.rs  navigation.rs  requests.rs  semantic.rs  symbols.rs  tests.rs  workspace.rs
crates/musi_native/src/: tests.rs
crates/musi_native_ffi/src/: ffi.rs  loader.rs  tests.rs
crates/musi_project/src/: builtin_std.rs  diag.rs  diag_catalog_gen.rs  (+1 more)
docs/reference/: comments.md  language-feature-coverage.md
lib/std/: ascii.ms  assert.ms  bits.ms  bytes.ms  cli.ms  cmp.ms  collections.ms  crypto.ms  datetime.ms  encoding.ms  env.ms  errors.ms  expect.ms  ffi.ms  fmt.ms  fs.ms  io.ms  json.ms  libc.ms  libm.ms  log.ms  math.ms  maybe.ms  musi.json  option.ms  os.ms  path.ms  prelude.ms  process.ms  random.ms  result.ms  semver.ms  std.ms  sys.ms  testing.ms  text.ms  uuid.ms
specs/interop/: c-interop-memory.md
specs/language/: syntax.md  type-core.md
specs/runtime/: interop.md  memory-model.md
(+124 files in other folders)
