[package]
name = "musi_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
musi_fmt = { path = "../musi_fmt" }
musi_project = { path = "../musi_project" }
async-lsp = { version = "0.2.4", features = ["tokio", "stdio"] }
musi_tooling = { path = "../musi_tooling" }
serde_json = { workspace = true }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
